add export finished book
